--- a/src/pages/auth/views/AuthPage.scss
+++ b/src/pages/auth/views/AuthPage.scss
@@ -5,20 +5,24 @@
   text-align: left;
   width: 100%;
   height: 100%;
+  max-width: 440px;
+  margin: 0 auto;
+  gap: 16px;
 
   &__title {
     font-size: 40px;
     font-weight: 600;
-    margin-bottom: 40px;
+    margin-bottom: 32px;
     color: #1f2937;
     text-align: center;
-    margin-top: 32px;
+    margin-top: 24px;
+    line-height: 1.2;
   }
   
   &__form {
     display: flex;
     flex-direction: column;
-    gap: 32px;
+    gap: 28px;
     flex: 1;
   }
 
@@ -28,6 +32,22 @@
 
     .ui-button {
       width: 100%;
+    }
+  }
+
+  @media (max-width: 600px) {
+    max-width: 100%;
+    padding: 0 4px 8px;
+    gap: 12px;
+
+    &__title {
+      font-size: 30px;
+      margin-top: 12px;
+      margin-bottom: 24px;
+    }
+
+    &__form {
+      gap: 20px;
     }
   }
 }
