--- a/src/pages/profile/views/ProfilePage.scss
+++ b/src/pages/profile/views/ProfilePage.scss
@@ -4,4 +4,12 @@
   background: #f5f7ff;
   padding: 24px;
   box-sizing: border-box;
+
+  @media (max-width: 900px) {
+    padding: 16px;
+  }
+
+  @media (max-width: 720px) {
+    padding: 12px;
+  }
 }
