--- a/src/pages/inbox/components/ComposeModal/ComposeModal.scss
+++ b/src/pages/inbox/components/ComposeModal/ComposeModal.scss
@@ -200,6 +200,13 @@
 
 .compose-modal__delete-slot {
   display: inline-flex;
+  width: 137px;
+  height: 40px;
+  border-radius: 10px;
+}
+
+.compose-modal__delete-slot {
+  display: inline-flex;
 }
 
 @media (max-width: 720px) {
