письма для мобилки

--- a/src/shared/components/MailItem/MailItem.hbs
+++ b/src/shared/components/MailItem/MailItem.hbs
@@ -15,10 +15,11 @@
                 </div>
             {{/if}}
         </div>
-        <span class="mail-item__from" title="{{from}}">{{from}}</span>
     </div>
-
-    <span class="mail-item__subject" title="{{subject}}">{{subject}}</span>
-    <span class="mail-item__preview" title="{{preview}}">{{preview}}</span>
+    <div class="mail-item__content">
+        <span class="mail-item__from" title="{{from}}">{{from}}</span>
+        <span class="mail-item__subject" title="{{subject}}">{{subject}}</span>
+        <span class="mail-item__preview" title="{{preview}}">{{preview}}</span>
+    </div>
     <time class="mail-item__time">{{time}}</time>
 </article>
