animation for folders

--- a/src/pages/profile/components/ProfileSidebar/ProfileSidebar.hbs
+++ b/src/pages/profile/components/ProfileSidebar/ProfileSidebar.hbs
@@ -15,4 +15,5 @@
   {{/if}}
 
   <div class="profile-sidebar__back" data-slot="back"></div>
+  <div class="profile-sidebar__folders" data-slot="folders"></div>
 </div>
