--- a/src/shared/widgets/Sidebar/Sidebar.hbs
+++ b/src/shared/widgets/Sidebar/Sidebar.hbs
@@ -1,10 +1,12 @@
 <aside class="sidebar">
     <button class="sidebar__compose" data-compose>{{composeButtonText}}</button>
 
-    <ul class="sidebar__folders" data-slot="folders"></ul>
+    <div class="sidebar__scroll">
+        <ul class="sidebar__folders" data-slot="folders"></ul>
 
-    <button class="sidebar__create-folder sidebar-folder sidebar-folder--action" data-create-folder type="button">
-        <span class="sidebar-folder__icon" aria-hidden="true" style="background-image: url('/img/folder-add.svg');"></span>
-        <span class="sidebar-folder__name">Создать папку</span>
-    </button>
+        <button class="sidebar__create-folder sidebar-folder sidebar-folder--action" data-create-folder type="button">
+            <span class="sidebar-folder__icon" aria-hidden="true" style="background-image: url('/img/folder-add.svg');"></span>
+            <span class="sidebar-folder__name">Создать папку</span>
+        </button>
+    </div>
 </aside>
