--- a/src/pages/inbox/components/ComposeModal/ComposeModal.hbs
+++ b/src/pages/inbox/components/ComposeModal/ComposeModal.hbs
@@ -26,8 +26,14 @@
 
       <div class="compose-modal__actions">
         <div class="compose-modal__action-slot" data-slot="attach"></div>
+        <input type="file" class="file-input" multiple accept="*/*" data-file-input style="display: none;" />
         <div class="compose-modal__action-slot" data-slot="draft"></div>
       </div>
+
+      <div class="compose-modal__attachments">
+        <div class="attachments-list" data-attachments-list></div>
+      </div>
+
       <textarea class="compose-modal__textarea" placeholder="Текст письма" data-field="body"></textarea>
       <div class="compose-modal__footer">
         <div class="compose-modal__send-slot" data-slot="send"></div>
