--- a/src/shared/widgets/MailList/MailList.hbs
+++ b/src/shared/widgets/MailList/MailList.hbs
@@ -1,3 +1,6 @@
 <section class="mail-list">
     <div class="mail-list__items"></div>
+    <div class="mail-list__footer" data-slot="footer">
+        <div class="mail-list__sentinel" data-load-sentinel></div>
+    </div>
 </section>
