--- a/src/pages/inbox/components/ComposeModal/ComposeModal.hbs
+++ b/src/pages/inbox/components/ComposeModal/ComposeModal.hbs
@@ -28,6 +28,9 @@
         <div class="compose-modal__action-slot" data-slot="attach"></div>
         <div class="compose-modal__action-slot" data-slot="draft"></div>
       </div>
+      <div class="compose-modal__attachments" data-slot="attachments"></div>
+      <div class="compose-modal__attach-error" data-attach-error></div>
+      <input class="compose-modal__file-input" type="file" data-attach-input multiple hidden />
       <textarea class="compose-modal__textarea" placeholder="Введите сообщение" data-field="body"></textarea>
       <div class="compose-modal__footer">
         <div class="compose-modal__delete-slot" data-slot="delete"></div>
