--- a/src/pages/inbox/components/ComposeModal/ComposeModal.hbs
+++ b/src/pages/inbox/components/ComposeModal/ComposeModal.hbs
@@ -25,8 +25,8 @@
       </div>
 
       <div class="compose-modal__actions">
-        <div class="compose-modal__action-slot" data-slot="attach"></div>
-        <div class="compose-modal__action-slot" data-slot="draft"></div>
+        <div class="compose-modal__action-slot compose-modal__action-slot--attach" data-slot="attach"></div>
+        <div class="compose-modal__action-slot compose-modal__action-slot--draft" data-slot="draft"></div>
       </div>
       <div class="compose-modal__attachments" data-slot="attachments"></div>
       <div class="compose-modal__attach-error" data-attach-error></div>
