--- a/src/shared/components/MailItem/MailItem.scss
+++ b/src/shared/components/MailItem/MailItem.scss
@@ -1,6 +1,6 @@
 .mail-item {
   display: grid;
-  grid-template-columns: auto minmax(150px, 1.2fr) minmax(0, 1.5fr) auto;
+  grid-template-columns: auto 2fr 3fr auto;
   align-items: center;
   column-gap: 16px;
   padding: 12px 16px;
@@ -62,6 +62,14 @@
     justify-content: center;
   }
 
+  &__content {
+    display: grid;
+    grid-template-columns: 1fr 1.2fr 1fr;
+    align-items: center;
+    column-gap: 12px;
+    min-width: 0;
+  }
+
   &__from {
     min-width: 0;
     font-weight: 700;
@@ -107,64 +115,65 @@
 @media (max-width: 720px) {
   .mail-item {
     display: grid;
-    grid-template-columns: auto 1fr auto; 
+    grid-template-columns: auto 1fr auto;
     grid-template-rows: auto auto auto;
-    grid-template-areas:
-      "avatar from time"
-      "avatar subject time"
-      "avatar preview time";
     column-gap: 12px;
     row-gap: 4px;
     align-items: center;
     padding: 12px;
 
     &__left {
-      grid-area: avatar; 
-      align-self: start;      
+      grid-row: 1 / 4;
+      grid-column: 1;
+      align-self: start;
       display: flex;
-      flex-direction: row; 
+      flex-direction: row;
       align-items: center;
-      gap: 8px; 
+      gap: 8px;
 
       .mail-item__status {
-         margin-bottom: 0; 
+         margin-bottom: 0;
       }
     }
 
     &__content {
+      grid-row: 1 / 4;
+      grid-column: 2;
       display: grid;
-      grid-template-areas: 
-        "from" 
-        "subject" 
-        "preview";
-      grid-area: from; 
-      align-items: center;
+      grid-template-rows: auto auto auto;
+      row-gap: 4px;
+      align-items: start;
       min-width: 0;
     }
 
     &__from {
-      grid-area: from;
       font-size: 14px;
     }
 
     &__subject {
-      grid-area: subject;
       font-size: 15px;
+      white-space: normal;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
     }
 
     &__preview {
-      grid-area: preview;
       font-size: 13px;
       color: #6b7280;
-      white-space: nowrap;
+      white-space: normal;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
       overflow: hidden;
-      text-overflow: ellipsis;
     }
 
     &__time {
-      grid-area: time; 
-      align-self: start; 
-      justify-self: end; 
+      grid-row: 1;
+      grid-column: 3;
+      align-self: start;
+      justify-self: end;
       font-size: 12px;
       color: #94a3b8;
     }
