--- a/src/shared/widgets/Sidebar/Sidebar.hbs
+++ b/src/shared/widgets/Sidebar/Sidebar.hbs
@@ -7,4 +7,6 @@
         <span class="sidebar-folder__icon" aria-hidden="true" style="background-image: url('/img/folder-add.svg');"></span>
         <span class="sidebar-folder__name">Создать папку</span>
     </button>
+
+    <div class="sidebar__ad" data-ad-slot></div>
 </aside>
