--- a/src/pages/inbox/components/ComposeModal/ComposeModal.scss
+++ b/src/pages/inbox/components/ComposeModal/ComposeModal.scss
@@ -172,6 +172,7 @@
   display: flex;
   flex-direction: column;
   gap: 6px;
+  overflow: hidden;
 
   &--uploading {
     opacity: 0.7;
@@ -184,6 +185,7 @@
   font-weight: 700;
   color: var(--color-text, #1f2544);
   word-break: break-word;
+  padding-right: 22px;
 }
 
 .compose-modal__attachment-meta {
